<resources>
    <string name="app_name" translatable="false">Newborn Photo, Baby Milestones</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this Newborn Photo, Baby Milestones, would \nyou mind rating us on the Google Play, then?</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="report_bugs_and_tell_us_what_to_improve">Report bugs and tell us what to improve</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="request">Request or feedback</string>
    <string name="send_email">Send by email&#8230;</string>
    <string name="email_clients_not_found">Not found any Email client</string>
    <string name="version">Version</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="loading">Loading</string>
    <string name="please_select_a_language">Please select a language!</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="intro_1">Variety of Beautiful Template</string>
    <string name="intro_2">Easily Edit Baby Photo</string>
    <string name="intro_3">Diverse Stickers &amp; Frames</string>
    <string name="get_started">Get started</string>
    <string name="permission">Permission</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app requires the following permissions to provide services for you:</string>
    <string name="overlay_draw">Overlay Draw</string>
    <string name="next2">NEXT</string>
    <string name="title_dialog_per">Grant these permissions to use <b>\"Newborn Photo, Baby Milestones\"</b></string>
    <string name="content_dialog_per_noti">Note: You can also grant permission in <b>Settings -> Apps -> Newborn Photo, Baby Milestones -> Notifications </b></string>
    <string name="content_dialog_per_storage">Note: You can also grant permission in <b>Settings -> Apps -> Newborn Photo, Baby Milestones -> Storage </b></string>
    <string name="content_dialog_per_overlay">Note: You can also grant permission in <b>Settings -> Display over other Apps -> Newborn Photo, Baby Milestones</b></string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="choose_language">Choose Language</string>
    <string name="notification">Notification</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="camera">Camera</string>
    <string name="read_image_storage">Read Image Storage</string>
    <string name="capture_precious_moments">Capture Precious Moments</string>
    <string name="start_with_image">Start with Image</string>
    <string name="customize_freestyle">Customize Freestyle</string>
    <string name="holiday">Holiday</string>
    <string name="milestones">Milestones</string>
    <string name="ai_trend">AI Trend</string>
    <string name="general">General</string>
    <string name="home">Home</string>
    <string name="my_creation">My Creation</string>
    <string name="no_image_in_here">No image in here.</string>
    <string name="create_new">Create New</string>
    <string name="crop_image">Crop Image</string>
    <string name="origin">Origin</string>
    <string name="save">Save</string>
    <string name="more_than_50_items_at_once">Maximum of item: 50</string>
    <string name="change_photo">Change photo</string>
    <string name="flip_h">Flip H</string>
    <string name="flip_v">Flip V</string>
    <string name="opacity">Opacity</string>
    <string name="edit_text">Edit Text</string>
    <string name="font">Font</string>
    <string name="shadow">Shadow</string>
    <string name="format">Format</string>
    <string name="background">Background</string>
    <string name="background_color">Background Color</string>
    <string name="remove">Remove</string>
    <string name="filter">Filter</string>
    <string name="border">Border</string>
    <string name="frame">Frame</string>
    <string name="sticker">Sticker</string>
    <string name="text">Text</string>
    <string name="photo">Photo</string>
    <string name="accessory">Accessory</string>
    <string name="alphabet">Alphabet</string>
    <string name="shapes">Shapes</string>
    <string name="status">Status</string>
    <string name="mother_day">Mother Day</string>
    <string name="father_day">Father Day</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="toys">Toys</string>
    <string name="baby_boy">Baby Boy</string>
    <string name="baby_girl">Baby Girl</string>
    <string name="_1st_time">1st Time</string>
    <string name="announcement">Announcement</string>
    <string name="summer">Summer</string>
    <string name="new_year">New year</string>
    <string name="error">Error</string>
    <string name="load_image_failed">Load image failed!</string>
    <string name="tap_to_add_photo">Tap to add photo</string>
    <string name="download_success">Download successfully!</string>
    <string name="download_failed">Download failed!</string>
    <string name="delete_">Delete?</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_photo">Are you sure you want to delete this photo?</string>
    <string name="failed_to_get_image">Failed to get image!</string>
    <string name="view">View</string>
    <string name="download">Download\n</string>
    <string name="result">Result</string>
    <string name="enter_text">Enter text</string>
    <string name="please_entry_text">Please entry text!</string>
    <string name="font_style">Font Style</string>
    <string name="you_need_to_connect_internet_to_use_this_function">Make sure that Wi-fi or mobile data is turned on, then try again.</string>
    <string name="connect_internet">Connect lost!</string>
    <string name="back_to_previous">Quit</string>
    <string name="change">Change</string>
    <string name="please_choose_a_frame_first">Please choose a frame first!</string>
    <string name="please_choose_a_sticker">Please choose a sticker!</string>


</resources>