<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_edit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:background="?android:attr/actionBarItemBackground"
            android:padding="4dp"
            android:src="@drawable/back_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12sp"
            android:ellipsize="end"
            android:fontFamily="@font/aeonik_pro_bold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/sticker"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivGone"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivGone"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:padding="4dp"
            android:src="@drawable/tick_round_2"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvFrameList"
        android:layout_width="match_parent"
        android:layout_height="508dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/clBottom"
        app:layout_constraintTop_toBottomOf="@id/clHeader"
        app:spanCount="4"
        tools:listitem="@layout/item_sticker_list" />

    <LinearLayout
        android:id="@+id/clBottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_dialog_header"

        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvMilestones"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_s"
                    android:text="@string/milestones"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvAccessory"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/accessory"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvAlphabet"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/alphabet"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvShapes"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/shapes"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvStatus"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvMotherDay"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/mother_day"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvFatherDay"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/father_day"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvPregnancy"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/pregnancy"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvToys"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/toys"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvBabyBoy"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/baby_boy"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvBabyGirl"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/baby_girl"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tv1stTime"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/_1st_time"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvAnnouncement"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/announcement"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvSummer"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:background="@drawable/bg_item_sn"
                    android:text="@string/summer"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvHoliday"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/bg_item_sn"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/holiday"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/tvNewYear"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingHorizontal="16dp"
                    android:minWidth="48dp"
                    android:background="@drawable/bg_item_sn"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/new_year"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>