<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/bg_dialog_2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/aeonik_pro_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/delete_"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/svn_gilroy"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/are_you_sure_you_want_to_delete_this_photo"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnDeny"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/delete_cancel"
            android:ellipsize="end"
            android:fontFamily="@font/aeonik_pro_regular"
            android:gravity="center"
            android:lines="1"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnAllow"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/delete"
            android:ellipsize="end"
            android:fontFamily="@font/aeonik_pro_regular"
            android:gravity="center"
            android:lines="1"
            android:paddingHorizontal="12dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>