<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/bg_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp">

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:src="@drawable/ic_no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/aeonik_pro_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/connect_internet"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/aeonik_pro_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/you_need_to_connect_internet_to_use_this_function"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnDeny"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_camera_access_deny"
            android:ellipsize="end"
            android:fontFamily="@font/svn_gilroy"
            android:gravity="center"
            android:lines="1"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp"
            android:text="@string/back_to_previous"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnAllow"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/bg_camera_access_allow"
            android:ellipsize="end"
            android:fontFamily="@font/aeonik_pro_bold"
            android:gravity="center"
            android:lines="1"
            android:paddingHorizontal="12dp"
            android:text="@string/go_to_setting"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>